<resources>
    <string name="app_name">PTSD Aid</string>

    <!-- Navigation Items in the Drawer Layout -->
    <string name="nav_simple_test">Recommendations</string>
    <string name="nav_test">PTSD Test</string>
    <string name="Resources">Resources</string>
    <string name="nav_nearby">VA Facilities</string>
    <string name="nav_news">News</string>
    <string name="nav_support">Support</string>
    <string name="nav_call">Call</string>
    <string name="nav_website">Websites</string>

...
    <string name="see_professional_medium">You may benefit from seeking help from a professional</string>
    <string name="see_professional_high">You are advised to see your physician or a qualified mental health professional immediately for a complete assessment</string>
    <string name="find_professional">Find Professional</string>
    <string name="share_results">Share Results</string>

    <!-- Resources -->
    <string name="symptoms">Symptoms</string>
    <string name="symptoms_detail">Usually start soon after the event but may not appear for months or years later.\n\nSymptoms include nightmares or flashbacks, avoiding situations that remind you of an event, avoiding situations or people that trigger memories.\n\nNegative changes in beliefs and feelings, the way you feel about yourself or others may change. You may feel guilt or shame. You may 
    <string name="causes">Causes</string>
    <string name="causes_detail">Usually occurs after a traumatic event. It depends on the intensity of the trauma, how long it lasted, if injured or lost someone, how close you were to the event and how much you felt in control of the event.</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="diagnosis_detail">This app is for reference only. For a complete diagnosis, please visit a mental health professional.</string>
    <string name="treatment">Treatment</string>
...
    <string name="trusted_contact_explanation">Tap the call button anytime in the app to call your trusted contact</string>
    <string name="add_trusted_contact_prompt">Would you like to add a trusted contact?</string>
    <string name="change_trusted_contact">Change Trusted Contact</string>
    <string name="add_trusted_contact">Add Trusted Contact</string>

    <!-- Other -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alarm_service_label">Alarm Service Label</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="error_open_dialer">Unable to open the dialer</string>
    <string name="error_choose_contact">Unable to choose a trusted contact</string>
    <string name="error_location_permission">Unable to load the VA facilities. Please grant the location permission</string>
...
